# exile

./: .env-sample  .gitignore  LICENSE  Procfile  README.md  app.py  config.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml
exile/: __init__.py  email.py  models.py  utils.py
exile/api/: __init__.py  forms.py  routes.py
exile/auth/: __init__.py  email.py  forms.py  routes.py
exile/dashboard/: __init__.py  routes.py
exile/errors/: __init__.py  handlers.py
exile/main/: __init__.py  routes.py
exile/static/: manifest.json  robots.txt  sitemap.xml
exile/static/favicon/: favicon.psd  site.webmanifest
exile/static/scripts/: chart-city.js  chart-overview.js  script.js
exile/static/styles/: expand.min.css  global.css  pico.css  toastify.min.css
exile/templates/: base.html  index.html
exile/templates/api/: create.html  delete.html  edit.html  history.html
exile/templates/api/statistics/: chart-browser.html  chart-city.html  chart-country.html  chart-os.html  chart-overview.html  chart-referrer.html  chart-single.html  table-browser.html  table-city.html  table-country.html  table-dashboard.html  table-os.html  (+3 more)
exile/templates/auth/: login.html  register.html  reset-password-request.html  reset-password.html
exile/templates/components/: dashboard-navigation.html  footer.html  header.html  local-storage-table.html  macros.html  wtf.html
exile/templates/dashboard/: dashboard.html  edit.html  short.html  shorts.html
exile/templates/email/: reset-password.html  reset-password.txt
exile/templates/errors/: 404.html  429.html  500.html
(+7 files in other folders)
