[project]
name = "exile"
version = "0.1.0"
description = "Link shortener"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.0",
    "flask-login>=0.6.3",
    "flask-mail>=0.10.0",
    "flask-migrate>=4.1.0",
    "flask-moment>=1.0.6",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "gunicorn>=23.0.0",
    "httpx>=0.28.1",
    "psycopg2>=2.9.10",
    "pyjwt>=2.10.1",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.0.1",
    "sqlalchemy>=2.0.38",
    "user-agents>=2.2.0",
    "wtforms>=3.2.1",
]
